--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+We are building on the coordino framework
+
 You need Wamp/Lamp/Xampp to run the website on localhost.
 Just copy paste the folder to htdocs(in case of xampp) and typpe in localhost/askpesit 
 follow instructions on the screen to install it.
